[project]
name = "psyctl-moducon"
version = "0.1.0"
description = "Gradio app for steering LLM with psyctl steering vectors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "gradio>=4.0.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
